[#33] Fixed links in tables and table css wordwrap

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -29,3 +29,8 @@
 .highlight-gml pre {
     color: #c0c0c0 !important;
 }
+
+/* Fix tables */
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal !important;
+}
